--- a/.classpath
+++ b/.classpath
@@ -23,5 +23,26 @@
 	<classpathentry kind="lib" path="C:/Users/Maxime/Documents/java fanfan/lib/lib/xalan-2.7.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Maxime/Documents/java fanfan/lib/lib/xercesImpl-2.11.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Maxime/Documents/java fanfan/lib/lib/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/commons-lang3-3.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/cssparser-0.9.14.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/htmlunit-2.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/htmlunit-core-js-2.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/httpclient-4.3.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/httpcore-4.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/httpmime-4.3.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/jetty-http-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/jetty-io-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/jetty-util-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/jetty-websocket-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/nekohtml-1.9.21.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/sac-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/serializer-2.7.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/xalan-2.7.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/xercesImpl-2.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Edouard/Desktop/lib/xml-apis-1.4.01.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
